feat: create crud resume